# projects1

spliits/: .dockerignore  .env.aws.template  .gitignore  Dockerfile  ETL_DAG.py  README.md  Report.md  compose.yml  extracted_models_and_schemas.md  main.py  mock_data.py  pyproject.toml
spliits/alembic/: env.py
spliits/alembic/versions/: 02bd9aecd63d_audit_log_table.py  112e4d8732ae_setup_models_init.py  1b9762c0c603_add_revoked_tokens_table.py  1c6feec4a05b_make_hostid_index.py  3ca9738216db_add_host_id_in_pool_memebers.py  75ca3a594ee7_add_policy_engine_requirement.py  82128b2f4573_add_pool_id_in_notifications.py  a113c8ef758b_update_tables.py  af8daeb311bc_update_tables.py  c9c6dc99de9b_create_users_table.py  d2b20526369b_create_index_on_is_active_created_at_on_.py  d80f81e6efcd_create_index_on_receiver_id_and_created_.py  db283cc92d4a_initial.py  df48ba063e5c_pool.py  f4f26ef7412e_audit_log_table.py  f8d9a6d606e4_create_index_on_unread_notification_on_.py  fd06e0da5ca1_add_posts_table_and_update_users.py  fdaed1d146b6_add_pools_table.py
spliits/app/: OAuth2.py  app.py  db.py  exception.py  log.py  models.py  schemas.py  test.py
spliits/app/models/: __init__.py  audit_log.py  jwt.py  notifications.py  pool_members.py  pools.py  users.py
spliits/app/policy/: policies.py  policy_engine.py
spliits/app/routers/: admin.py  notifications.py  pools.py  requests.py  users.py
spliits/app/schemas/: micallenious.py  pools.py  users.py
spliits/app/security/: OAuth2.py  authentication.py  (+1 more)
spliits/dags/: ETL_DAG.py
spliits/routers/: authentication.py  users.py
(+2 files in other folders)
