[project]
name = "spliits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "faker>=40.28.1",
    "fastapi>=0.137.1",
    "jwt>=1.4.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
